dialog styling, more dark mode fixes, how to content

--- a/src/components/custom/Hello.module.scss
+++ b/src/components/custom/Hello.module.scss
@@ -17,7 +17,7 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: rgba(0, 0, 0, 0.05);
+        background: rgba(0, 0, 0, 0.2);
         border-radius: 4px;
     }
 
